# rust-uefi

./: Cargo.toml
src/: allocator.rs  base.rs  bootservices.rs  guid.rs  lib.rs
src/protocol/: block.rs  device_path.rs  disk.rs  mod.rs
src/util/: device_path.rs  mod.rs
